src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.XFeatures2D.DllImport.cs

#if !NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_create")]
        internal static extern int Features2DBriskCreate(int threshold, int octaves, float patternScale, out IntPtr brisk);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_create_pattern")]
        internal static extern int Features2DBriskCreatePattern(float* radiusList, int radiusCount, int* numberList, int numberCount, float dMax, float dMin, int* indexChange, int indexChangeCount, out IntPtr brisk);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_create_pattern_with_threshold")]
        internal static extern int Features2DBriskCreatePatternWithThreshold(int threshold, int octaves, float* radiusList, int radiusCount, int* numberList, int numberCount, float dMax, float dMin, int* indexChange, int indexChangeCount, out IntPtr brisk);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_release")]
        internal static extern void Features2DBriskRelease(IntPtr brisk);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_clear")]
        internal static extern int Features2DBriskClear(IntPtr brisk);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_empty")]
        internal static extern int Features2DBriskEmpty(IntPtr brisk, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_descriptor_size")]
        internal static extern int Features2DBriskDescriptorSize(IntPtr brisk, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_descriptor_type")]
        internal static extern int Features2DBriskDescriptorType(IntPtr brisk, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_default_norm")]
        internal static extern int Features2DBriskDefaultNorm(IntPtr brisk, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_detect_count")]
        internal static extern int Features2DBriskDetectCount(IntPtr brisk, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_detect_fill")]
        internal static extern int Features2DBriskDetectFill(IntPtr brisk, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_compute")]
        internal static extern int Features2DBriskCompute(IntPtr brisk, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_detect_and_compute_count")]
        internal static extern int Features2DBriskDetectAndComputeCount(IntPtr brisk, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_detect_and_compute_fill")]
        internal static extern int Features2DBriskDetectAndComputeFill(IntPtr brisk, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_default_name_length")]
        internal static extern int Features2DBriskDefaultNameLength(IntPtr brisk, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_default_name_fill")]
        internal static extern int Features2DBriskDefaultNameFill(IntPtr brisk, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_get_threshold")]
        internal static extern int Features2DBriskGetThreshold(IntPtr brisk, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_set_threshold")]
        internal static extern int Features2DBriskSetThreshold(IntPtr brisk, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_get_octaves")]
        internal static extern int Features2DBriskGetOctaves(IntPtr brisk, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_set_octaves")]
        internal static extern int Features2DBriskSetOctaves(IntPtr brisk, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_get_pattern_scale")]
        internal static extern int Features2DBriskGetPatternScale(IntPtr brisk, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_brisk_set_pattern_scale")]
        internal static extern int Features2DBriskSetPatternScale(IntPtr brisk, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_create")]
        internal static extern int Features2DKazeCreate(int extended, int upright, float threshold, int nOctaves, int nOctaveLayers, int diffusivity, out IntPtr kaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_release")]
        internal static extern void Features2DKazeRelease(IntPtr kaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_clear")]
        internal static extern int Features2DKazeClear(IntPtr kaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_empty")]
        internal static extern int Features2DKazeEmpty(IntPtr kaze, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_descriptor_size")]
        internal static extern int Features2DKazeDescriptorSize(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_descriptor_type")]
        internal static extern int Features2DKazeDescriptorType(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_default_norm")]
        internal static extern int Features2DKazeDefaultNorm(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_detect_count")]
        internal static extern int Features2DKazeDetectCount(IntPtr kaze, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_detect_fill")]
        internal static extern int Features2DKazeDetectFill(IntPtr kaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_compute")]
        internal static extern int Features2DKazeCompute(IntPtr kaze, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_detect_and_compute_count")]
        internal static extern int Features2DKazeDetectAndComputeCount(IntPtr kaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_detect_and_compute_fill")]
        internal static extern int Features2DKazeDetectAndComputeFill(IntPtr kaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_default_name_length")]
        internal static extern int Features2DKazeDefaultNameLength(IntPtr kaze, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_default_name_fill")]
        internal static extern int Features2DKazeDefaultNameFill(IntPtr kaze, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_extended")]
        internal static extern int Features2DKazeGetExtended(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_extended")]
        internal static extern int Features2DKazeSetExtended(IntPtr kaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_upright")]
        internal static extern int Features2DKazeGetUpright(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_upright")]
        internal static extern int Features2DKazeSetUpright(IntPtr kaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_threshold")]
        internal static extern int Features2DKazeGetThreshold(IntPtr kaze, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_threshold")]
        internal static extern int Features2DKazeSetThreshold(IntPtr kaze, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_n_octaves")]
        internal static extern int Features2DKazeGetNOctaves(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_n_octaves")]
        internal static extern int Features2DKazeSetNOctaves(IntPtr kaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_n_octave_layers")]
        internal static extern int Features2DKazeGetNOctaveLayers(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_n_octave_layers")]
        internal static extern int Features2DKazeSetNOctaveLayers(IntPtr kaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_get_diffusivity")]
        internal static extern int Features2DKazeGetDiffusivity(IntPtr kaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_diffusivity")]
        internal static extern int Features2DKazeSetDiffusivity(IntPtr kaze, int value);
